--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/programming-hero-web-course1/b610-lerning-platform-server-side-1Aminul#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "vercel": "^28.4.12"
   }
 }
